[Refactor] .collect(Collectors.toList()); -> .toList();로 변경
.toList는 같은 역할이지만, 리스트 수정이 불가능하다는 특징이 있습니다.